switch to saml2 client

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -245,7 +245,7 @@ pac4j {
     }}
     # 'Catch all' rule to make sure the whole application stays secure.
     {".*" = {
-      clients = "FormClient"
+      clients = "SAML2Client"
       matchers = "excludedPath"
     }}
   ]
@@ -389,8 +389,8 @@ db {
 baseUrl = "http://localhost:9000/"
 
 saml2 {
-  keystorePath = "sdffs"
-  keystorePassword = "jhsdfjhsf"
-  privateKeyPassword = "sdfjsfhsdf"
-  identityProviderMetadataPath = "sfjhsf"
+  keystorePath = "samlKeystore.jks"
+  keystorePassword = "pac4j-demo-passwd"
+  privateKeyPassword = "pac4j-demo-passwd"
+  identityProviderMetadataPath = "FederationMetadata.xml"
 }
