messing with saml setup and adding local reverse-proxy

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -320,7 +320,7 @@ play.filters {
   # This is useful to prevent cache poisoning attacks.
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
-    #allowed = [".example.com", "localhost:9000"]
+    allowed = ["adfs-test.local.dev-gutools.co.uk", "localhost:9000"]
   }
 }
 
@@ -386,7 +386,7 @@ db {
   #default.logSql=true
 }
 
-baseUrl = "http://localhost:9000/"
+baseUrl = "https://localhost:9000"
 
 saml2 {
   keystorePath = "samlKeystore.jks"
