--- a/conf/application.conf
+++ b/conf/application.conf
@@ -231,13 +231,14 @@ pac4j {
     }}
     # Rules for the REST services. These don't specify a client and will return 401
     # when not authenticated.
-    {"/restservices/.*" = {
+    {"\\/api/.*" = {
     }}
-    {"/loginform" = {
+    {"\\/loginform" = {
       clients = "AnonymousClient"
     }}
-    {"/callback?.*" = {
+    {"\\/callback?.*" = {
       clients = "AnonymousClient"
+      matchers = "post"
     }}
     # The login page needs to be publicly accessible.
     {"/login.html" = {
@@ -386,7 +387,8 @@ db {
   #default.logSql=true
 }
 
-baseUrl = "https://localhost:9000"
+#baseUrl = "https://localhost:9000"
+baseUrl = "https://adfs-test.local.dev-gutools.co.uk"
 
 saml2 {
   keystorePath = "samlKeystore.jks"
