working load of frontend with ajax call

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -236,6 +236,10 @@ pac4j {
     {"\\/loginform" = {
       clients = "AnonymousClient"
     }}
+    {"\\/assets\\/javascript\\/.*" = {
+      clients = "AnonymousClient"
+      matchers = "get"
+    }}
     {"\\/callback?.*" = {
       clients = "AnonymousClient"
       matchers = "post"
