fiddling with jwt

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,6 +59,7 @@ play.modules {
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
   enabled += "SecurityModule"
+  //enabled += "play.api.cache.redis.RedisCacheModule"
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
 }
@@ -231,7 +232,7 @@ pac4j {
     }}
     # Rules for the REST services. These don't specify a client and will return 401
     # when not authenticated.
-    {"\\/api/.*" = {
+    {"\\/api\\/.*" = {
     }}
     {"\\/loginform" = {
       clients = "AnonymousClient"
@@ -243,10 +244,6 @@ pac4j {
     {"\\/callback?.*" = {
       clients = "AnonymousClient"
       matchers = "post"
-    }}
-    # The login page needs to be publicly accessible.
-    {"/login.html" = {
-      clients = "AnonymousClient"
     }}
     # 'Catch all' rule to make sure the whole application stays secure.
     {".*" = {
