allow java serialization for redis backend, adding a dummy page to show a "please close this window" popup when auth completed

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,6 +33,7 @@ akka {
   # And then uncomment this line to debug the configuration.
   #
   #log-config-on-start = true
+  actor.allow-java-serialization = true
 }
 
 ## Secret key
@@ -59,6 +60,7 @@ play.modules {
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
   enabled += "SecurityModule"
+  enabled += "play.api.cache.redis.RedisCacheModule"
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
 }
@@ -232,6 +234,7 @@ pac4j {
     # Rules for the REST services. These don't specify a client and will return 401
     # when not authenticated.
     {"\\/api/.*" = {
+      clients = "DirectBearerAuthClient"
     }}
     {"\\/loginform" = {
       clients = "AnonymousClient"
