parking current state

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -249,7 +249,7 @@ pac4j {
     }}
     # 'Catch all' rule to make sure the whole application stays secure.
     {".*" = {
-      clients = "SAML2Client"
+      clients = "OAuthClient"
       matchers = "excludedPath"
     }}
   ]
