--- a/conf/application.conf
+++ b/conf/application.conf
@@ -233,9 +233,10 @@ pac4j {
     }}
     # Rules for the REST services. These don't specify a client and will return 401
     # when not authenticated.
-    {"\\/api/.*" = {
-      clients = "DirectBearerAuthClient"
-    }}
+//    {"/api/.*" = {
+//      client = "AnonymousClient"
+//      matchers = "options"
+//    }}
     {"\\/loginform" = {
       clients = "AnonymousClient"
     }}
@@ -243,14 +244,18 @@ pac4j {
       clients = "AnonymousClient"
       matchers = "post"
     }}
+    #allow static assets
+    {"\\/assets\\/.*" = {
+      clients = "AnonymousClient"
+      matchers = "get"
+    }}
     # The login page needs to be publicly accessible.
-    {"/login.html" = {
+    {"/" = {
       clients = "AnonymousClient"
     }}
     # 'Catch all' rule to make sure the whole application stays secure.
     {".*" = {
-      clients = "SAML2Client"
-      matchers = "excludedPath"
+      clients = "DirectBearerAuthClient"
     }}
   ]
 }
@@ -274,9 +279,11 @@ play.filters {
 
     # The allowed origins. If null, all origins are allowed.
     #allowedOrigins = ["https://www.example.com"]
+    allowedOrigins = null
 
     # The allowed HTTP methods. If null, all methods are allowed
     #allowedHttpMethods = ["GET", "POST"]
+    allowedHttpMethods = ["GET"]
   }
 
   ## CSRF Filter
@@ -393,9 +400,24 @@ db {
 #baseUrl = "https://localhost:9000"
 baseUrl = "https://adfs-test.local.dev-gutools.co.uk"
 
-saml2 {
-  keystorePath = "samlKeystore.jks"
-  keystorePassword = "pac4j-demo-passwd"
-  privateKeyPassword = "pac4j-demo-passwd"
-  identityProviderMetadataPath = "FederationMetadata.xml"
+auth {
+  signingCertPem = """***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+***REMOVED***
+"""
 }
