--- a/conf/application.conf
+++ b/conf/application.conf
@@ -218,6 +218,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.JwtAuthenticationFilter
+  enabled += play.filters.cors.CORSFilter
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
   disabled += play.filters.csrf.CSRFFilter
@@ -239,10 +240,12 @@ play.filters {
   cors {
     # Filter paths by a whitelist of path prefixes
     #pathPrefixes = ["/some/path", ...]
+    pathPrefixes = ["/api"]
 
     # The allowed origins. If null, all origins are allowed.
     #allowedOrigins = ["https://www.example.com"]
 
+    allowedOrigins = null
     # The allowed HTTP methods. If null, all methods are allowed
     #allowedHttpMethods = ["GET", "POST"]
   }
