--- a/conf/application.conf
+++ b/conf/application.conf
@@ -296,27 +296,7 @@ play.filters {
   }
 }
 
-
-#baseUrl = "https://localhost:9000"
-baseUrl = "https://adfs-test.local.dev-gutools.co.uk"
-
 auth {
-  tokenSigningCert = """***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***"""
+  signingCertPem = """PUT YOUR CERTIFICATE HERE!!!
+"""
 }
